--- a/app/src/main/res/layout/coach_item.xml
+++ b/app/src/main/res/layout/coach_item.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content" android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_marginRight="@dimen/margin_left"
+    android:layout_marginRight="35px"
     >
 
     <ImageView
         android:id="@+id/iv_pic"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_auto_baseheight="width"
-        android:scaleType="fitXY"
+        android:layout_width="400px"
+        android:layout_height="400px"
+        android:scaleType="centerCrop"
         android:src="@mipmap/timg" />
     <TextView
         android:id="@+id/tv_name"
@@ -27,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/font_gray"
-        android:textSize="@dimen/text_size_notice"
+        android:textSize="30px"
         android:text="执教球队名字"
         android:layout_marginTop="20px"
         />
