--- a/app/src/main/res/layout/adapter_bsdetail_shipin.xml
+++ b/app/src/main/res/layout/adapter_bsdetail_shipin.xml
@@ -61,7 +61,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="阅读 121"
+                    android:text="观看 121"
                     android:textSize="38px"
                     android:layout_marginRight="40px"
                     android:textColor="@color/text_gray"/>
