--- a/app/src/main/res/layout/layout_banner.xml
+++ b/app/src/main/res/layout/layout_banner.xml
@@ -32,7 +32,7 @@
             android:id="@+id/llDot"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"
+            android:layout_gravity="center"
             android:orientation="horizontal" >
         </LinearLayout>
     </LinearLayout>
