--- a/app/src/main/res/layout/activity_zbdetail.xml
+++ b/app/src/main/res/layout/activity_zbdetail.xml
@@ -235,4 +235,16 @@
 
     </LinearLayout>
 
+    <FrameLayout
+        android:id="@+id/fl_loading"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/action_bar"
+        android:background="#FEFEFE">
+
+        <include
+            android:id="@+id/rl_define_progress"
+            layout="@layout/layout_loading" />
+    </FrameLayout>
+
 </RelativeLayout>
