--- a/app/src/main/res/layout/activity_bsdetail.xml
+++ b/app/src/main/res/layout/activity_bsdetail.xml
@@ -320,4 +320,17 @@
         </LinearLayout>
 
     </ScrollView>
+
+    <FrameLayout
+        android:id="@+id/fl_loading"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/action_bar"
+        android:background="#FEFEFE">
+
+        <include
+            android:id="@+id/rl_define_progress"
+            layout="@layout/layout_loading" />
+    </FrameLayout>
+
 </RelativeLayout>
