--- a/app/src/main/res/layout/coach_details.xml
+++ b/app/src/main/res/layout/coach_details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -15,6 +15,7 @@
     <ScrollView android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/action_bar"
         android:fillViewport="true"
         >
     <LinearLayout
@@ -117,4 +118,17 @@
             />
         </LinearLayout>
     </ScrollView>
-</LinearLayout>
+
+    <FrameLayout
+        android:id="@+id/fl_loading"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/action_bar"
+        android:background="#FEFEFE">
+
+        <include
+            android:id="@+id/rl_define_progress"
+            layout="@layout/layout_loading" />
+    </FrameLayout>
+
+</RelativeLayout>
