--- a/app/src/main/res/layout/comm_bsss.xml
+++ b/app/src/main/res/layout/comm_bsss.xml
@@ -96,8 +96,10 @@
                 android:textSize="35px"
                 android:layout_marginLeft="40px"
                 android:layout_marginTop="40px"
-                android:paddingLeft="5px"
-                android:paddingRight="5px"
+                android:paddingLeft="@dimen/u_pading_left_right"
+                android:paddingRight="@dimen/u_pading_left_right"
+                android:paddingTop="@dimen/u_pading_top_bottom"
+                android:paddingBottom="@dimen/u_pading_top_bottom"
                 android:textColor="@color/theme_color"
                 android:background="@drawable/guide_background"/>
             <TextView
@@ -105,8 +107,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="11人"
-                android:paddingLeft="5px"
-                android:paddingRight="5px"
+                android:paddingLeft="@dimen/u_pading_left_right"
+                android:paddingRight="@dimen/u_pading_left_right"
+                android:paddingTop="@dimen/u_pading_top_bottom"
+                android:paddingBottom="@dimen/u_pading_top_bottom"
                 android:textSize="35px"
                 android:layout_marginLeft="40px"
                 android:layout_marginTop="40px"
