--- a/app/src/main/res/layout/adapter_myvideo.xml
+++ b/app/src/main/res/layout/adapter_myvideo.xml
@@ -88,8 +88,11 @@
                         android:layout_centerVertical="true"
                         android:background="@drawable/shape_bg_round_corner_green"
                         android:gravity="center_vertical"
-                        android:padding="2dip"
                         android:text="U16"
+                        android:paddingLeft="@dimen/u_pading_left_right"
+                        android:paddingRight="@dimen/u_pading_left_right"
+                        android:paddingTop="@dimen/u_pading_top_bottom"
+                        android:paddingBottom="@dimen/u_pading_top_bottom"
                         android:textColor="@color/theme_color" />
 
                     <TextView
