--- a/app/src/main/res/layout/trainning_list_item.xml
+++ b/app/src/main/res/layout/trainning_list_item.xml
@@ -71,13 +71,18 @@
         >
         <TextView
             android:id="@+id/tv_tag"
-            android:layout_width="90px"
-            android:layout_height="60px"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:textSize="@dimen/text_size_notice"
             android:gravity="center"
+            android:layout_centerVertical="true"
             android:background="@mipmap/icon_tag"
             android:textColor="@color/theme_green"
             android:text="U15"
+            android:paddingLeft="@dimen/u_pading_left_right"
+            android:paddingRight="@dimen/u_pading_left_right"
+            android:paddingTop="@dimen/u_pading_top_bottom"
+            android:paddingBottom="@dimen/u_pading_top_bottom"
             />
     <TextView
         android:id="@+id/tv_price"
