--- a/app/src/main/res/layout/fragment_zxja.xml
+++ b/app/src/main/res/layout/fragment_zxja.xml
@@ -7,7 +7,10 @@
     <com.handmark.pulltorefresh.library.PullToRefreshScrollView
         android:id="@+id/pullrefreshlistview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fadingEdge="none"
+        android:overScrollMode="never"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
