--- a/app/src/main/res/layout/activity_all_kecheng.xml
+++ b/app/src/main/res/layout/activity_all_kecheng.xml
@@ -16,7 +16,10 @@
     <com.handmark.pulltorefresh.library.PullToRefreshListView
         android:id="@+id/pullrefreshlistview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:fadingEdge="none"
+        android:overScrollMode="never"
+        />
 
 
 </LinearLayout>
