--- a/app/src/main/res/layout/activity_mysp.xml
+++ b/app/src/main/res/layout/activity_mysp.xml
@@ -20,7 +20,9 @@
         <com.handmark.pulltorefresh.library.PullToRefreshListView
             android:id="@+id/pullrefreshlistview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:fadingEdge="none"
+            android:overScrollMode="never">
 
 
         </com.handmark.pulltorefresh.library.PullToRefreshListView>
