--- a/app/src/main/res/layout/coach_list.xml
+++ b/app/src/main/res/layout/coach_list.xml
@@ -50,6 +50,7 @@
         android:src="@mipmap/icon_collect"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
+        android:visibility="gone"
         />
 
 </RelativeLayout>
