--- a/app/src/main/res/layout/fragment_scjl.xml
+++ b/app/src/main/res/layout/fragment_scjl.xml
@@ -13,7 +13,9 @@
         <top.smartsport.www.listview_pulltorefresh.PullToRefreshListView
             android:id="@+id/pullrefreshlistview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"></top.smartsport.www.listview_pulltorefresh.PullToRefreshListView>
+            android:layout_height="match_parent"
+            android:fadingEdge="none"
+            android:overScrollMode="never"></top.smartsport.www.listview_pulltorefresh.PullToRefreshListView>
 
         <RelativeLayout
             android:id="@+id/mykcempty"
