--- a/app/src/main/res/layout/fragment_zxqx.xml
+++ b/app/src/main/res/layout/fragment_zxqx.xml
@@ -8,6 +8,8 @@
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fadingEdge="none"
+        android:overScrollMode="never"
         android:fillViewport="true">
         <LinearLayout
             android:layout_width="match_parent"
