1.赛事：筛选：比赛状态改为3列;2.pulltorefresh去掉上下角标;

--- a/app/src/main/res/layout/fragment_zxhd.xml
+++ b/app/src/main/res/layout/fragment_zxhd.xml
@@ -13,4 +13,5 @@
     android:fadingEdge="none"
     android:overScrollMode="never"
     ptr:ptrListViewExtrasEnabled="false"
+    ptr:ptrShowIndicator="false"
     ptr:ptrMode="both"/>
