--- a/app/src/main/res/layout/activity_all_kecheng.xml
+++ b/app/src/main/res/layout/activity_all_kecheng.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ptr="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -19,6 +20,7 @@
         android:layout_height="match_parent"
         android:fadingEdge="none"
         android:overScrollMode="never"
+        ptr:ptrShowIndicator="false"
         />
 
 
