--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ptr="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
             android:background="#f0efef"
@@ -11,6 +12,7 @@
         android:layout_height="match_parent"
         android:divider="#f0efef"
         android:dividerHeight="25px"
+        ptr:ptrShowIndicator="false"
         >
     </com.handmark.pulltorefresh.library.PullToRefreshListView>
     <RelativeLayout
