--- a/app/src/main/res/layout/fragment_zxss.xml
+++ b/app/src/main/res/layout/fragment_zxss.xml
@@ -13,4 +13,5 @@
     android:fadingEdge="none"
     android:overScrollMode="never"
     ptr:ptrListViewExtrasEnabled="false"
+    ptr:ptrShowIndicator="false"
     ptr:ptrMode="both"/>
