--- a/app/src/main/res/layout/fragment_qx.xml
+++ b/app/src/main/res/layout/fragment_qx.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="145px"         android:background="@color/theme_color"
+        android:layout_height="145px"
+        android:background="@color/theme_color"
         android:orientation="horizontal">
 
         <TextView
@@ -17,46 +18,57 @@
             android:text="青训"
             android:textColor="@color/white"
             android:textSize="48px" />
+
         <LinearLayout
-                android:id="@+id/bs_ll_choice"
-                android:layout_width="150px"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="20px"
-                android:gravity="center"
-                android:layout_height="match_parent">
+            android:id="@+id/bs_ll_choice"
+            android:layout_width="150px"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="20px"
+            android:gravity="center">
 
             <ImageView
-                    android:id="@+id/bs_choice"
-                    android:layout_gravity="center"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@mipmap/bs_choice"/>
+                android:id="@+id/bs_choice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:src="@mipmap/bs_choice" />
 
         </LinearLayout>
 
     </RelativeLayout>
 
-    <top.smartsport.www.widget.PagerSlidingTabStrip
-        android:id="@+id/qx_tab"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="136px"
-        app:contentTextColor="@color/theme_color"
-        app:pstsIndicatorColor="@color/theme_color"
-        app:pstsIndicatorHeight="2px"
         android:background="@color/white"
-        app:contentUnselectedTextColor="@color/black"
-        app:contentTextSize="58px"
-        app:contentSelectedTextColor="@color/theme_color"
-        app:pstsUnderlineColor="@color/text_gray"
-        app:pstsShouldExpand="true"
-        app:pstsUnderlineHeight="0px"
-        app:pstsTabPaddingLeftRight="4px"
-        android:fillViewport="false"
-        />
+        android:orientation="horizontal">
+
+        <top.smartsport.www.widget.PagerSlidingTabStrip
+            android:id="@+id/qx_tab"
+            android:layout_width="match_parent"
+            android:layout_height="136px"
+            android:layout_marginLeft="130px"
+            android:layout_marginRight="130px"
+            android:background="@color/white"
+            android:fillViewport="false"
+            app:contentSelectedTextColor="@color/theme_color"
+            app:contentTextColor="@color/theme_color"
+            app:contentTextSize="58px"
+            app:contentUnselectedTextColor="@color/black"
+            app:pstsIndicatorColor="@color/theme_color"
+            app:pstsIndicatorHeight="5px"
+            app:pstsShouldExpand="true"
+            app:pstsTabPaddingLeftRight="10px"
+
+            app:pstsUnderlineColor="@color/text_gray"
+            app:pstsUnderlineHeight="0px" />
+
+    </RelativeLayout>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/qx_viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/bg_gray"/>
+        android:background="@color/bg_gray" />
 </LinearLayout>
