--- a/app/src/main/res/layout/activity_bs_sign_up.xml
+++ b/app/src/main/res/layout/activity_bs_sign_up.xml
@@ -109,7 +109,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
-                        android:text="299"
+                        android:text="¥0.00"
                         android:textColor="@color/red"
                         android:textSize="16sp"
                         android:layout_marginLeft="10dp"/>
@@ -191,7 +191,6 @@
                         android:layout_weight="3"
                         android:layout_height="wrap_content">
                         <ImageView
-                            android:tag="enableEditText(bs_sign_up_team_tv)"
                             android:id="@+id/bs_sign_up_team_iv"
                             android:layout_alignParentRight="true"
                             android:layout_marginRight="10dp"
@@ -280,7 +279,7 @@
                         android:layout_width="0dp"
                         android:layout_weight="3"
                         android:layout_height="wrap_content">
-                        <ImageView android:tag="enableEditText(bs_sign_up_contact_tv)"
+                        <ImageView
                             android:id="@+id/bs_sign_up_contact_iv"
                             android:layout_alignParentRight="true"
                             android:src="@mipmap/edit"
@@ -324,7 +323,7 @@
                         android:layout_width="0dp"
                         android:layout_weight="3"
                         android:layout_height="wrap_content">
-                        <ImageView android:tag="enableEditText(bs_sign_up_phone_tv)"
+                        <ImageView
                             android:id="@+id/bs_sign_up_phone_iv"
                             android:layout_alignParentRight="true"
                             android:src="@mipmap/edit"
@@ -335,7 +334,7 @@
 
                             android:layout_marginRight="10px"
                             android:background="@color/color_transparent"
-                            android:enabled="false"
+                            
                             android:id="@+id/bs_sign_up_phone_tv"
                             android:textSize="15dip"
                             android:hint="16316491317"
