--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -3,57 +3,74 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
     <FrameLayout
+        android:id="@+id/action_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/action_bar"
         android:layout_alignParentTop="true">
-        <include layout="@layout/layout_actionbar" /></FrameLayout>
+
+        <include layout="@layout/layout_actionbar" />
+    </FrameLayout>
+
     <RelativeLayout
-        android:id="@+id/mykcempty"
+
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        <TextView android:visibility="invisible"
-            android:id="@+id/gojoinlesson"
-            android:layout_width="700px"
+        <ListView
+            android:tag="fake:[[mipmap.default_head_image,123,12,1]];layout:message_item"
+            android:id="@+id/lv"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="30dip"
-            android:background="@mipmap/btn_long"
-            android:gravity="center"
-            android:text="加入会员观看所有在线教案"
-            android:textColor="@android:color/white"
-            android:textSize="18dip" />
-
-        <RelativeLayout android:layout_above="@+id/gojoinlesson"
+            android:layout_weight="1"
+            android:background="@color/bg_gray"
+            android:scrollbars="none" />
+        <RelativeLayout
+            android:id="@+id/empty"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/gojoinlesson"
+                android:layout_width="700px"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:gravity="center_horizontal"
-                android:orientation="vertical"
-                >
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="30dip"
+                android:background="@mipmap/btn_long"
+                android:gravity="center"
+                android:text="加入会员观看所有在线教案"
+                android:textColor="@android:color/white"
+                android:textSize="18dip"
+                android:visibility="invisible" />
 
-                <ImageView
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_above="@+id/gojoinlesson">
+
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="30px"
-                    android:src="@mipmap/mymsgempty" />
+                    android:layout_centerInParent="true"
+                    android:gravity="center_horizontal"
+                    android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="还没有任何消息"
-                    android:textColor="@color/text_gray"
-                    android:textSize="17dip" />
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="30px"
+                        android:src="@mipmap/mymsgempty" />
 
-            </LinearLayout>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="还没有任何消息"
+                        android:textColor="@color/text_gray"
+                        android:textSize="17dip" />
+
+                </LinearLayout>
+            </RelativeLayout>
         </RelativeLayout>
-
     </RelativeLayout>
 </LinearLayout>
