--- a/app/src/main/res/layout/fragment_all_jl.xml
+++ b/app/src/main/res/layout/fragment_all_jl.xml
@@ -13,7 +13,7 @@
         <include layout="@layout/layout_actionbar" />
     </FrameLayout>
 
-    <RelativeLayout
+    <RelativeLayout android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
