--- a/app/src/main/res/layout/layout_loading.xml
+++ b/app/src/main/res/layout/layout_loading.xml
@@ -7,7 +7,7 @@
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:indeterminate="false"
+        android:indeterminate="true"
         android:layout_centerInParent="true"
         android:indeterminateDrawable="@drawable/loading_color" />
 
