--- a/app/src/main/res/layout/qingxun_qingxunkecheng.xml
+++ b/app/src/main/res/layout/qingxun_qingxunkecheng.xml
@@ -1,73 +1,166 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="140dip">
-        <ImageView android:id="@+id/image" android:scaleType="fitXY" android:src="@mipmap/default_img"
-                   android:layout_width="324px"
-                   android:layout_height="324px" android:layout_margin="10dip"
-        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="140dip"
+        android:orientation="horizontal">
 
-        <LinearLayout android:layout_marginTop="5dip" android:orientation="vertical"
-                      android:layout_width="match_parent" android:layout_height="120dip">
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="324px"
+            android:layout_height="324px"
+            android:layout_margin="10dip"
+            android:scaleType="fitXY"
+            android:src="@mipmap/default_img" />
 
-            <LinearLayout android:layout_width="match_parent" android:layout_height="60dip">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="120dip"
+            android:layout_marginTop="5dip"
+            android:orientation="vertical">
 
-                <TextView android:id="@+id/title" android:gravity="center_vertical" android:layout_width="match_parent"
-                          android:layout_height="match_parent" android:maxLines="2"
-                          android:textStyle="bold" android:textSize="16dip" android:textColor="@color/black"
-                          android:text="青训课程标题 青训课程标题 青训课程标题 "/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="60dip">
+
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:maxLines="2"
+                    android:text="青训课程标题 青训课程标题 青训课程标题 "
+                    android:textColor="@color/black"
+                    android:textSize="16dip"
+                    android:textStyle="bold" />
             </LinearLayout>
-            <LinearLayout android:orientation="vertical" android:layout_width="match_parent"
-                          android:layout_height="60dip">
-                <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
-                              android:layout_height="30dip">
-                    <TextView android:id="@+id/date" android:text="2017-6-27" android:layout_width="wrap_content"
-                              android:layout_height="match_parent" android:gravity="center_vertical"
-                              android:textSize="12dip"
-                              android:textColor="@android:color/darker_gray"/>
-                    <TextView android:text=" | " android:layout_width="wrap_content"
-                              android:layout_height="match_parent" android:gravity="center_vertical"
-                              android:textSize="12dip"
-                              android:textColor="@android:color/darker_gray"/>
-                    <TextView android:id="@+id/address" android:text="上海虹口体育馆" android:layout_width="wrap_content"
-                              android:layout_height="match_parent" android:gravity="center_vertical"
-                              android:textSize="12dip"
-                              android:textColor="@android:color/darker_gray"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="60dip"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="30dip"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="center_vertical"
+                        android:text="2017-6-27"
+                        android:textColor="@android:color/darker_gray"
+                        android:textSize="12dip" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="center_vertical"
+                        android:text=" | "
+                        android:textColor="@android:color/darker_gray"
+                        android:textSize="12dip" />
+
+                    <TextView
+                        android:id="@+id/address"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="center_vertical"
+                        android:text="上海虹口体育馆"
+                        android:textColor="@android:color/darker_gray"
+                        android:textSize="12dip" />
 
                 </LinearLayout>
-                <RelativeLayout android:layout_width="match_parent" android:layout_height="30dip">
-                    <TextView android:id="@+id/u16" android:background="@drawable/shape_bg_round_corner_green"
-                              android:text="U16"
-                              android:layout_width="wrap_content"
-                              android:layout_height="wrap_content" android:gravity="center_vertical"
-                              android:textColor="@color/theme_color"
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="30dip">
+
+                    <TextView
+                        android:id="@+id/u16"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:background="@drawable/shape_bg_round_corner_green"
+                        android:gravity="center_vertical"
+                        android:paddingBottom="@dimen/u_pading_top_bottom"
                         android:paddingLeft="@dimen/u_pading_left_right"
                         android:paddingRight="@dimen/u_pading_left_right"
                         android:paddingTop="@dimen/u_pading_top_bottom"
-                        android:paddingBottom="@dimen/u_pading_top_bottom"
-                              android:layout_centerVertical="true"/>
-                    <TextView android:layout_alignParentRight="true" android:text="￥1999/年"
-                              android:layout_width="wrap_content"
-                              android:layout_height="match_parent" android:gravity="center_vertical"
-                              android:id="@+id/price" android:textColor="@android:color/holo_red_dark"
-                              android:layout_marginRight="10dip" />
+                        android:text="U16"
+                        android:textColor="@color/theme_color" />
+
+                    <TextView
+                        android:id="@+id/price"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="10dip"
+                        android:gravity="center_vertical"
+                        android:text="￥1999/年"
+                        android:textColor="@android:color/holo_red_dark" />
                 </RelativeLayout>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-    <View android:layout_width="match_parent" android:layout_height="0.8dip" android:background="@color/text_hint"/>
-    <RelativeLayout android:layout_width="match_parent" android:layout_height="40dip">
-        <RoundImageView android:id="@+id/coach_head" android:layout_marginLeft="10dip" android:layout_height="25dip" android:layout_width="25dip" android:layout_centerVertical="true" android:src="@mipmap/head_default"
-        />
-        <TextView android:layout_width="wrap_content" android:layout_marginLeft="10dip" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_toRightOf="@+id/coach_head" android:id="@+id/coach_name"/>
-        <TextView android:layout_width="wrap_content" android:layout_marginRight="10dip" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_alignParentRight="true" android:id="@+id/woyaobaoming"
-        android:background="@drawable/shape_bg_round_corner_green"  android:text="我要报名" android:textColor="@color/theme_color"
-        android:paddingLeft="8dip" android:paddingRight="8dip" android:paddingTop="2dip" android:paddingBottom="2dip"/>
-        <TextView  android:layout_width="wrap_content" android:layout_marginRight="10dip" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_toLeftOf="@+id/woyaobaoming" android:id="@+id/haishengjigeminge" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.8dip"
+        android:background="@color/text_hint" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dip">
+
+        <RoundImageView
+            android:id="@+id/coach_head"
+            android:layout_width="25dip"
+            android:layout_height="25dip"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dip"
+            android:src="@mipmap/head_default" />
+
+        <TextView
+            android:id="@+id/coach_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dip"
+            android:layout_toRightOf="@+id/coach_head" />
+
+        <TextView
+            android:id="@+id/woyaobaoming"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dip"
+            android:background="@drawable/shape_bg_round_corner_green"
+            android:paddingBottom="2dip"
+            android:paddingLeft="8dip"
+            android:paddingRight="8dip"
+            android:paddingTop="2dip"
+            android:text="我要报名"
+            android:textColor="@color/theme_color" />
+
+        <TextView
+            android:id="@+id/haishengjigeminge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dip"
+            android:layout_toLeftOf="@+id/woyaobaoming" />
 
     </RelativeLayout>
-    <View android:layout_width="match_parent" android:layout_height="12dip" android:background="@color/line_color"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="12dip"
+        android:background="@color/line_color" />
 </LinearLayout>
