--- a/app/src/main/res/layout/adapter_qd_home.xml
+++ b/app/src/main/res/layout/adapter_qd_home.xml
@@ -69,6 +69,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
+                android:layout_gravity="right"
                 android:textSize="45px" />
 
             <TextView
