--- a/app/src/main/res/layout/activity_bsdetail.xml
+++ b/app/src/main/res/layout/activity_bsdetail.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/bg_gray">
 
     <FrameLayout
         android:id="@+id/action_bar"
@@ -50,6 +51,7 @@
                     android:id="@+id/bs_detail_ll__listView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@color/white"
                     android:orientation="vertical">
 
                     <top.smartsport.www.widget.MyListView
@@ -64,6 +66,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/white"
+                    android:layout_marginTop="20px"
                     android:orientation="vertical">
 
 
