--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -8,7 +8,7 @@
         android:layout_height="wrap_content"
         android:padding="@dimen/margin_left"
         >
-        <ImageView
+        <RoundImageView
             android:id="@+id/iv_head_icon"
             android:layout_width="100px"
             android:layout_height="100px"
