--- a/app/src/main/res/values/strings_signup.xml
+++ b/app/src/main/res/values/strings_signup.xml
@@ -31,10 +31,10 @@
     <string name="details_title">青训详情</string>
     <string name="details_quota">还剩</string>
     <string name="details_quota_unit">个名额</string>
-    <string name="details_school">青训学校:</string>
-    <string name="details_student">招生对象:</string>
-    <string name="details_time">青训时间:</string>
-    <string name="details_ground">青训场地:</string>
+    <string name="details_school">青训学校 ：</string>
+    <string name="details_student">招生对象 ：</string>
+    <string name="details_time">青训时间 ：</string>
+    <string name="details_ground">青训场地 ：</string>
     <string name="details_introduction">青训简介</string>
     <string name="details_class">推荐课程</string>
     <string name="details_sign_up">我要报名</string>
